feat: jdk25 based tuning (#205)
* feat: jdk25 based tuning

* fix comment

* update comments and limit

* updated the defaults and readme

* fix: maximum limit